Tue May 14 04:42:11 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_sec_context.c (make_ap_req): Change call to
 		krb5_auth_con_setcksumtype to use
 		krb5_auth_con_set_req_cksumtype by default instead.

Fri Apr 12 21:47:46 1996  Richard Basch  <basch@lehman.com>

        * k5seal.c k5unseal.c:
        Renamed MD5 routines to be preceded with krb5_

Thu Apr 11 18:53:09 1996  Theodore Y. Ts'o  <tytso@dcl>

	* acquire_cred.c (acquire_init_cred): Return GSS_S_CRED_UNAVAIL on
		if krb5_cc_set_flags() returns an error, since that's the
		call that will return an error if the credentials files
		doesn't exist.

Wed Apr  3 16:10:24 1996  Theodore Y. Ts'o  <tytso@dcl>

	* init_sec_context.c (krb5_gss_init_sec_context): If make_ap_req()
		returns KRB5APP_TKT_EXPIRED, then return
		GSS_S_CREDENTIALS_EXPIRED as the major return code.

Tue Apr  2 15:20:24 1996  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (SRCS): Inlined list of source files for SRCS and
		OBJS (for Macintosh build).

	* k5mech.c: Added Macintosh #ifdef so that the #include path is
		right for the Macintosh.

Wed Mar 20 20:25:53 1996  Theodore Y. Ts'o  <tytso@dcl>

	* rel_oid.c (krb5_gss_release_oid): Don't compile this procedure,
		since it's not used.  The mechanism glue layer uses the
		krb5_gss_internal_relase_oid() function.

	* pname_to_uid.c: Comment out #ident line.  This causes the
		Macintosh C compiler indigestion.  Remove #include of
		gssapi/gssapi.h, since that gets included by
		gssapiP_generic.h.

Fri Mar  8 21:36:29 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* util_cksum.c (kg_checksum_channel_bindings): Change sizeof(long)
		to sizeof(krb5_int32).

Sat Mar  2 02:22:30 1996  Theodore Y. Ts'o  <tytso@dcl>

	* k5mech.c (krb5_gss_get_context): Initialize the serializers
		here, instead of in export and import security context.
		This will speed things up a little.

	* export_sec_context.c (krb5_gss_export_sec_context): 
	* import_sec_context.c (krb5_gss_import_sec_context): Don't create